--- a/example/style/style.css
+++ b/example/style/style.css
@@ -1,113 +1,8 @@
-@import url("../style/index.css");
-body{
-    width: 1440px;
-    height: 4370px;
-    margin-left: 150px;
-    margin-right: 150px;
-    /* background-color: rgb(180, 215, 221); */
+@import url("../style/sign-up.css");
+@import url("../style/menu.css");
+@import url("../style/home.css");
+body {
+	width: 1440px;
+	height: 4370px;
 }
 
-.container{
-    display: flex;
-    border: 10px red ;
-    margin-top: 50px;
-    align-items: center;
-   
-}
-
-li{
-    display: inline-block;
-    margin-right: 44px;
-    flex-shrink: 1;
-}
-
-.logo{
-    
-    margin-right: 226px;
-    padding: 10px;
-   
-}
-ul.home{
-}
-
-.box1{
-    width: 577px;
-    height: 173px;
-   
-}
-p.box2{
-    margin-top: 70px;
-    width: 350px;
-    height: 72px;
-   
-}
-
-b.one{
-    font-size: 64px;
-}
-b.two{
-    font-size: 40px;
-}
-b.rd{
-    font-size: 50px;
-    color: #DE6A2A;
-}
-
-.container-bd{
-    display: flex;
-   
-    margin-top: 20px;
-    height: 591px;
-}
-
-
-
-div.menu{
-    margin-top: 50px;
-}
-
-.bd1{
-    flex-basis: auto; 
-    flex-shrink: 0;
-}
-
-.bd2{
-    flex-basis: 50%;
-    align-items: flex-end;
-    max-width: 600px;
-}
-
-.container-footer{
-  
-    border: 0.1px solid rgb(22, 34, 37);
-    display: flex;
-    align-items: center;
-    width: 1200px;
-    background-color: antiquewhite;
-}
-
-.box-footer{
-    height: 200px;
-    width: 33%;
-    margin-right: 20px;
-}
-
-li.footer{
-    display: block;
-    margin-bottom: 10px;
-}
-
-b.footer{
-    font-size: 24px;
-    opacity: inherit;
-    color: #DE6A2A;
-}
-
-img.anh1{
-    width: auto;
-    height: auto;
-    margin-top: 145px;
-}
-
-
-/* border: 1px solid rgb(22, 34, 37); */
