--- a/practice-one/css/menu.css
+++ b/practice-one/css/menu.css
@@ -8,6 +8,7 @@
 	align-items: center;
 	margin-top: 22px;
 	margin-bottom: 22px;
+  flex-shrink: 0;
 
 }
 
@@ -25,7 +26,6 @@ li.menu {
 	margin-right: 24px;
 	display: inline-flex;
 	color: #000;
-
 	font-family: "Satoshi";
 	font-size: 16px;
 	font-style: normal;
@@ -45,14 +45,14 @@ input.menu {
 	background-color: #F0F0F0;
 	width: 480px;
 	height: 48px;
-	max-height: 48px;
 	border-radius: 62px;
-	border: 2px none #F0F0F0;
+	border: 1px none #F0F0F0;
 	background-image: url("../assets/images/search.svg");
 	background-repeat: no-repeat;
 	background-position: 12px 12px;
 	padding: 2px 52px;
 	position: 662px;
+
 }
 
 img.cart {
@@ -65,7 +65,6 @@ img.cart {
 img.login {
 	height: 24px;
 	width: 24px;
-	float: right;
 }
 
 select {
