--- a/practice-one/css/home.css
+++ b/practice-one/css/home.css
@@ -17,7 +17,11 @@
   margin-bottom: 103px;
   /* border: 1px solid #c3c3c3; */
 }
-
+.home-box2 {
+  flex-basis: 620px;
+  display: flex;
+  /* border: 1px solid #c3c3c3; */
+} 
 li.home {
   display: inline-block;
   margin-left: 0px;
@@ -32,8 +36,12 @@ p.find {
   height: 173px;
   margin: 0;
   padding: 0;
-
+  text-indent: cap alphabetic;
+  padding-bottom: both;
+  line-height: 57px
 }
+
+
 
 p.bowser {
   margin-top: 32px;
@@ -47,14 +55,15 @@ p.bowser {
 button.home {
   width: 210px;
   height: 52px;
-  margin-top: 31px;
+  margin-top: 32px;
   background-color: #000;
   border-radius: 62px;
+  background-color: black;
+  border: none;
 }
 
 p.put {
   color: #FFF;
-
   font-family: "Satoshi";
   font-size: 16px;
   font-style: normal;
@@ -72,18 +81,20 @@ table.home {
 
 th.home {
   color: #000;
-
   font-family: "Satoshi";
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  line-height: 30px
 }
+
+div.home-browws
 
 td.home {
   color: rgba(0, 0, 0, 0.60);
 
-  font-family: Satoshi;
+  font-family: "Satoshi";
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -94,4 +105,25 @@ td.home {
 tr.home {
   text-align: left;
   margin-right: 32px;
+}
+
+img.star1 {
+  width: 56px;
+  height: 56px;
+  margin-left: 30px;
+  margin-top: 310px;
+}
+
+.home-box3 {
+  flex-basis: 310px;
+  /* border: 1px solid #c3c3c3; */
+}
+.home-box4 {
+  flex-basis: 310px;
+  /* border: 1px solid #c3c3c3; */
+}
+
+img.star2 {
+  margin-left: 225px;
+  margin-top: 86px;
 }
