--- a/practice-one/css/color.css
+++ b/practice-one/css/color.css
@@ -1,72 +1,68 @@
 /* color for sign up */
 
-.sign-up-box {
-    background-color: black;
+.sign-up_section  {
+  background-color: black;
 }
 
-.text-sign-up {
-    color: #FFF;
+.sign-up_section p {
+  color: #FFF;
 }
 
-.a-sign-up {
-    color: #fff;
-    box-shadow: 0 1px white;
+.sign-up_section a {
+  color: #fff;
+  box-shadow: 0 1px white;
 }
 
-.button-sign-up {
-    background-color: black;
+.sign-up_section button {
+  background-color: black;
 }
 
-.select-home {
-    border: #F0F0F0;
+
+/* color for header */
+
+.header_section .search {
+  border: 1px none #F0F0F0;
+  background-color: #F0F0F0;
 }
 
-/* color for menu */
 
-.text-find {
-    color: #000;
-}
-
-.button-home {
-    background-color: black;
-}
-
-.text-put {
-    color: #FFF;
-}
-
-.th-home {
-    color: #000;
-}
-
-.td-home {
-    color: rgba(0, 0, 0, 0.60);
-}
-
-.input-menu {
-    border: 1px none #F0F0F0;
-    background-color: #F0F0F0;
+.header select {
+  border: #F0F0F0;
 }
 
 /* color for home */
 
-.text-find {
-    color: #000;
+.banner_section .container button {
+  background-color: black;
+  color: #FFF;
 }
 
-.button-home {
-   
-    background-color: black;
+.brand {
+  background-color: black;
 }
 
-.text-put {
-    color: #FFF;
+/* color for arivals & top selling */
+
+
+.arrival-sell {
+  color: rgba(0, 0, 0, 0.40);
 }
 
-.th-home {
-    color: #000;
+.arrival-percent {
+  color: #F33;
+  background: rgba(255, 51, 51, 0.10);
 }
 
-.td-home {
-    color: rgba(0, 0, 0, 0.60);
+.arrival-span {
+  color: rgba(0, 0, 0, 0.60);
+}
+
+.arrival-button {
+  border: 1px solid rgba(0, 0, 0, 0.10);
+}
+
+/* color for brower */
+
+.browse {
+  background-color: #F0F0F0;
 }
