--- a/practice-one/css/sign-up.css
+++ b/practice-one/css/sign-up.css
@@ -1,27 +1,35 @@
-.sign-up-box {
-  height: 38px;
+.sign-up_section {
+  max-height: 38px;
   width: 1440px;
-  display: flex;
-  align-items: center;
-  font-family: Satoshi;
 }
 
-.text-sign-up {
+.sign-up_section .container {
+  width: 1240px;
+  margin-left: 100px;
+  margin-right: 100px;
+  height: 38px;
+  display: flex;
+  align-items: center;
+}
+
+.sign-up_section p {
   font-family: Satoshi;
   font-size: 14px;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 300;
   line-height: normal;
-  margin-left: 544px;
-  margin-right: 425px;
+  margin-left: 435px;
+  margin-right: 445px;
+  width: 351px;
 }
 
-.a-sign-up {
+.sign-up_section a {
   text-decoration-line: none;
 }
 
-.button-sign-up {
+.sign-up_section button {
   border: none;
   width: 20px;
   height: 20px;
+
 }
