--- a/practice-one/css/sign-up.css
+++ b/practice-one/css/sign-up.css
@@ -1,9 +1,9 @@
-.sign-up_section {
+.sign-up{
   max-height: 38px;
   width: 1440px;
 }
 
-.sign-up_section .container {
+.sign-up .container {
   width: 1240px;
   margin-left: 100px;
   margin-right: 100px;
@@ -12,7 +12,7 @@
   align-items: center;
 }
 
-.sign-up_section p {
+.text {
   font-family: Satoshi;
   font-size: 14px;
   font-style: normal;
@@ -23,13 +23,12 @@
   width: 351px;
 }
 
-.sign-up_section a {
+.link {
   text-decoration-line: none;
 }
 
-.sign-up_section button {
+.button-sign-up{
   border: none;
   width: 20px;
   height: 20px;
-
 }
