--- a/practice-one/css/header.css
+++ b/practice-one/css/header.css
@@ -1,10 +1,16 @@
+:root {
+  --search-border: 1px none #F0F0F0;
+  --search-background: #F0F0F0;
+  --drop-list-border: #F0F0F0;
+}
+
 .nav-bar {
   margin-left: 100px;
   margin-right: 100px;
   display: flex;
   width: 1250px;
   height: 48px;
-  align-items: center; 
+  align-items: center;
   margin-top: 22px;
   margin-bottom: 22px;
 }
@@ -39,6 +45,8 @@
   padding: 2px 52px;
   position: 662px;
   margin-left: 12px;
+  border: var(--search-border);
+  background-color: var(--search-background);
 }
 
 .cart {
@@ -56,4 +64,5 @@
 .drop-list {
   height: 16px;
   width: 16px;
+  border: var(--drop-list-border);
 }
