--- a/practice-one/css/sign-up.css
+++ b/practice-one/css/sign-up.css
@@ -1,9 +1,18 @@
+:root {
+  --background-color: black;
+  --text-color: #FFF;
+  --link-color: #fff;
+  --link-box-shadow: 0 1px white;
+  --button-sign-up-background: black;
+}
+
 .sign-up {
   max-height: 38px;
   width: 1440px;
   height: 38px;
   display: flex;
   align-items: center;
+  background-color: var(--background-color);
 }
 
 .text {
@@ -15,14 +24,18 @@
   margin-left: 535px;
   margin-right: 430px;
   width: 351px;
+  color: var(--text-color);
 }
 
 .link {
   text-decoration-line: none;
+  color: var(--link-color);
+  box-shadow: var(--link-box-shadow);
 }
 
 .button-sign-up {
   border: none;
   width: 20px;
   height: 20px;
+  background-color: var(--button-sign-up-background);
 }
