--- a/practice-one/css/sign-up.css
+++ b/practice-one/css/sign-up.css
@@ -1,7 +1,7 @@
 :root {
   --background-color: black;
-  --text-color: #FFF;
-  --link-color: #fff;
+  --text-color: #ffffff;
+  --link-color: #ffffff;
   --link-box-shadow: 0 1px white;
   --button-sign-up-background: black;
 }
