--- a/practice-one/css/style.css
+++ b/practice-one/css/style.css
@@ -26,14 +26,11 @@
 /*  DEFINE COLOR VARIABLE */
 
 :root {
-  --background-color: black;
+  --dark-color: black;
   --text-color: #fff;
-  --link-color: #fff;
   --link-box-shadow: 0 1px white;
-  --button-sign-up-background: black;
   --search-border: 1px none #f0f0f0;
-  --search-background: #f0f0f0;
-  --drop-list-border: #f0f0f0;
+  --light-color: #f0f0f0;
 }
 
 
@@ -96,7 +93,7 @@ p {
   height: 38px;
   display: flex;
   align-items: center;
-  background-color: var(--background-color);
+  background-color: var(--dark-color);
 }
 
 .text {
@@ -110,7 +107,7 @@ p {
 
 .link {
   text-decoration-line: none;
-  color: var(--link-color);
+  color: var(--text-color);
   box-shadow: var(--link-box-shadow);
 }
 
@@ -161,7 +158,7 @@ p {
   position: 662px;
   margin-left: 0px;
   border: var(--search-border);
-  background-color: var(--search-background);
+  background-color: var(--light-color);
 }
 
 .nav-icon {
@@ -176,7 +173,7 @@ p {
   margin-top: 5px;
   height: 16px;
   width: 16px;
-  border: var(--drop-list-border);
+  border: var(--light-color);
 }
 
 
@@ -201,7 +198,7 @@ p {
 .btn-primary {
   position: absolute;
   top: 507px;
-  background-color: var(--background-color);
+  background-color: var(--dark-color);
   color: var(--text-color)
 }
 
