--- a/practice-one/css/style.css
+++ b/practice-one/css/style.css
@@ -26,11 +26,11 @@
 /*  DEFINE COLOR VARIABLE */
 
 :root {
-  --dark-color: black;
+  --primary-color: black;
   --text-color: #fff;
   --link-box-shadow: 0 1px white;
   --search-border: 1px none #f0f0f0;
-  --light-color: #f0f0f0;
+  --secondary-color: #f0f0f0;
 }
 
 
@@ -93,7 +93,7 @@ p {
   height: 38px;
   display: flex;
   align-items: center;
-  background-color: var(--dark-color);
+  background-color: var(--primary-color);
 }
 
 .text {
@@ -158,7 +158,7 @@ p {
   position: 662px;
   margin-left: 0px;
   border: var(--search-border);
-  background-color: var(--light-color);
+  background-color: var(--secondary-color);
 }
 
 .nav-icon {
@@ -173,7 +173,7 @@ p {
   margin-top: 5px;
   height: 16px;
   width: 16px;
-  border: var(--light-color);
+  border: var(--secondary-color);
 }
 
 
@@ -198,7 +198,7 @@ p {
 .btn-primary {
   position: absolute;
   top: 507px;
-  background-color: var(--dark-color);
+  background-color: var(--primary-color);
   color: var(--text-color)
 }
 
