--- a/practice-one/css/style.css
+++ b/practice-one/css/style.css
@@ -31,6 +31,8 @@
   --link-box-shadow: 0 1px white;
   --search-border: 1px none #f0f0f0;
   --secondary-color: #f0f0f0;
+  --third-color : rgba(0, 0, 0, 0.40);
+  --fourth-color : #F33;
 }
 
 
@@ -77,10 +79,27 @@ h1 {
   position: 662px;
 }
 
+h2 {
+  height: 58px;
+  display: flex;
+  margin-top: 70px;
+  margin-left: 418px;
+  margin-right: 418px;
+  font-family: Integral CF;
+  font-size: 48px;
+}
+
 p {
   font-family: Satoshi;
   font-style: normal;
   line-height: normal;
+}
+
+hr {
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: 79px;
+  margin-bottom: 54px;
 }
 
 
@@ -243,4 +262,112 @@ p {
   left: 1255px;
   float: right;
   top: 220px;
+}
+
+
+
+
+
+/* SECTION BRAND */
+
+.brand-section {
+  height: 122px;
+  background-color: var(--primary-color);
+}
+
+.brand-ul {
+  display: flex;
+  align-items: center;
+  margin: auto;
+  justify-content: space-between;
+}
+
+.brand-item {
+  margin-top: 44px;
+}
+
+
+
+
+
+/* SECTION ARRIVAL */
+
+.arrival-section {
+  height: 745px;
+}
+
+.arrival-item {
+  display: inline-block;
+  justify-content: space-between;
+  align-items: center;
+  width: 280px;
+  height: 444px;
+  padding: 10px;
+}
+
+.arrival-img {
+  border-radius: 20px;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 296px;
+  height: 299px;
+}
+
+.name {
+  color: var(--primary-color);
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.evaluate {
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.evaluate-num {
+  color: var(--primary-color);
+  font-weight: 400;
+  font-size: 14px;
+  margin-left: 13px;
+}
+
+.span-num {
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--third-color);
+}
+
+.arrival-desc {
+  display: flex;
+  align-items: center;
+  width: 180px;
+  justify-content: space-between;
+}
+
+.price {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.sell {
+  font-size: 24px;
+  font-weight: 700;
+  text-decoration: line-through;
+  color: var(--third-color)
+}
+
+.percent {
+  font-size: 12px;
+  font-weight: 500;
+  border-radius: 62px;
+  color: var(--fourth-color)
+}
+
+.btn-secondary {
+  margin-top: 20px;
+  margin-left: 510px;
+  margin-right: 510px;
+  font-size: 16px;
 }
