rename tag html, fix comments

--- a/practice-one/css/style.css
+++ b/practice-one/css/style.css
@@ -28,7 +28,7 @@
 :root {
   --primary-color: black;
   --text-color: #fff;
-  --link-box-shadow: 0 1px white;
+  --link-box: 0 1px white;
   --search-border: 1px none #f0f0f0;
   --secondary-color: #f0f0f0;
   --third-color: rgba(0, 0, 0, 0.40);
@@ -45,7 +45,7 @@
 body {
   width: 1440px;
   height: 4370px;
-  margin: auto auto;
+  margin: auto;
 }
 
 .container {
@@ -77,12 +77,6 @@ p {
   margin: 1px 1px 1px 1px;
 }
 
-a {
-  text-decoration: none;
-  display: inline-block;
-  color: var(--primary-color);
-}
-
 
 
 
@@ -108,7 +102,18 @@ a {
 .link {
   text-decoration-line: none;
   color: var(--text-color);
-  box-shadow: var(--link-box-shadow);
+  box-shadow: var(--link-box);
+  text-decoration: none;
+}
+
+.link-primany {
+  text-decoration: none;
+  color: var(--primary-color);
+}
+
+.link-secondary {
+  text-decoration: none;
+  color: var(--text-color);
 }
 
 hr {
